[package]
name = "kademlia"
version = "0.1.0"
authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]

[dependencies]
bincode = "0.9"
clippy = { version = "*", optional = true }
log = "0.4"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
sha3 = "0.7"
simplelog = "0.5"
time = "0.1"

[dev-dependencies]
num-bigint = "0.1"
